--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SingupActivity"></activity>
+        <activity android:name=".SingupActivity"
+            android:theme="@style/fullScreen"
+            ></activity>
         <activity
             android:name=".MainActivity"
             android:theme="@style/fullScreen">
